// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pending - uniswapX trade titles > renders limit order correctly, with approvalPending= %p , revocationPending= %p, wrapTxHash= %p false false undefined 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[24px] mt-[48px] mb-[8px] w-[100%] animate-spore-enter-presence opacity-[1]"
    style="--spore-presence-enter-x: 40px; animation-duration: 300ms; animation-timing-function: ease-in-out;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 justify-center w-[64px] h-[64px] rounded-[999999px] overflow-visible relative"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
        style="--c-w: 64px; --c-h: 64px;"
      >
        <div
          class="fade-presence fade-presence-scale"
        >
          <svg
            data-testid="submitted-icon"
            fill="none"
            height="54"
            viewBox="0 0 54 54"
            width="54"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26.9997 0.333496C12.2717 0.333496 0.333008 12.2722 0.333008 27.0002C0.333008 41.7282 12.2717 53.6668 26.9997 53.6668C41.7277 53.6668 53.6663 41.7282 53.6663 27.0002C53.6663 12.2722 41.7277 0.333496 26.9997 0.333496ZM36.4131 25.7469C36.0238 26.1362 35.5117 26.3335 34.9997 26.3335C34.4877 26.3335 33.9756 26.1389 33.5863 25.7469L28.9997 21.1603V37.6668C28.9997 38.7708 28.1037 39.6668 26.9997 39.6668C25.8957 39.6668 24.9997 38.7708 24.9997 37.6668V21.1629L20.4131 25.7495C19.6318 26.5308 18.365 26.5308 17.5837 25.7495C16.8023 24.9682 16.8023 23.7014 17.5837 22.9201L25.5837 14.9201C25.7677 14.7361 25.9887 14.5898 26.2341 14.4884C26.722 14.2858 27.274 14.2858 27.762 14.4884C28.0074 14.5898 28.2291 14.7361 28.4131 14.9201L36.4131 22.9201C37.1944 23.7014 37.1944 24.9656 36.4131 25.7469Z"
              fill="#FF37C7"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[12px] px-[32px] w-[100%] opacity-[0.5] overflow-visible"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-w-[0px] shrink-0 grow-[1] w-[100%] min-h-[var(--c-min-h)] relative"
        style="--c-min-h: 72px;"
      >
        <div
          class="flex basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-col items-center gap-[12px] w-[100%] h-[100%] absolute"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)] text-center w-[100%]"
            data-testid="pending-modal-content-title"
          >
            Limit submitted
          </span>
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] text-center"
          >
            <div
              class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-center gap-[8px] w-[100%]"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[16px] h-[16px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="16"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 16px; height: 16px; border-radius: 16px; z-index: 1;"
                    width="16"
                  />
                </div>
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                  style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
                >
                  <div
                    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                    data-testid="network-logo-1"
                    style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 1.5px;"
                  >
                    <div
                      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                      style="object-fit: contain; width: 7px; height: 7px;"
                    >
                      <div
                        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                        style="background-image: url(ethereum-logo.png);"
                      />
                      <img
                        alt=""
                        class="css-accessibilityImage-9pa8cd"
                        draggable="false"
                        src="ethereum-logo.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
              >
                &lt;0.00001 DAI
              </span>
              <svg
                fill="none"
                stroke-width="8"
                style="width: 12px; height: 12px;"
                viewBox="0 0 18 18"
              >
                <path
                  d="M9.79261 16.1108L17.5398 8.36364L9.79261 0.616477L8.25852 2.15057L13.3807 7.25568H0V9.47159H13.3807L8.25852 14.5852L9.79261 16.1108Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[16px] h-[16px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="16"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                    style="object-fit: cover; width: 16px; height: 16px; border-radius: 16px; z-index: 1;"
                    width="16"
                  />
                </div>
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                  style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
                >
                  <div
                    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                    data-testid="network-logo-1"
                    style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 1.5px;"
                  >
                    <div
                      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                      style="object-fit: contain; width: 7px; height: 7px;"
                    >
                      <div
                        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                        style="background-image: url(ethereum-logo.png);"
                      />
                      <img
                        alt=""
                        class="css-accessibilityImage-9pa8cd"
                        draggable="false"
                        src="ethereum-logo.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
              >
                0.0001 USDC
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pending - uniswapX trade titles > renders limit order correctly, with approvalPending= %p , revocationPending= %p, wrapTxHash= %p false false undefined 2`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[24px] mt-[48px] mb-[8px] w-[100%] animate-spore-enter-presence opacity-[1]"
    style="--spore-presence-enter-x: 40px; animation-duration: 300ms; animation-timing-function: ease-in-out;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 justify-center w-[64px] h-[64px] rounded-[999999px] overflow-visible relative"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
        style="--c-w: 64px; --c-h: 64px;"
      >
        <div
          class="fade-presence fade-presence-scale"
        >
          <svg
            data-testid="confirmed-icon"
            fill="none"
            height="54"
            viewBox="0 0 54 54"
            width="54"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27 0.333008C12.28 0.333008 0.333313 12.2797 0.333313 26.9997C0.333313 41.7197 12.28 53.6663 27 53.6663C41.72 53.6663 53.6666 41.7197 53.6666 26.9997C53.6666 12.2797 41.72 0.333008 27 0.333008ZM37.7466 22.1997L25.2933 34.6263C24.9199 35.0263 24.4133 35.2131 23.8799 35.2131C23.3733 35.2131 22.8666 35.0263 22.4666 34.6263L16.2533 28.4131C15.48 27.6398 15.48 26.3596 16.2533 25.5863C17.0266 24.8129 18.3066 24.8129 19.08 25.5863L23.8799 30.3864L34.92 19.373C35.6933 18.573 36.9733 18.573 37.7466 19.373C38.52 20.1464 38.52 21.3997 37.7466 22.1997Z"
              fill="#0C8911"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[12px] px-[32px] w-[100%] opacity-[1] overflow-visible"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-w-[0px] shrink-0 grow-[1] w-[100%] min-h-[var(--c-min-h)] relative"
        style="--c-min-h: 72px;"
      >
        <div
          class="flex basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-col items-center gap-[12px] w-[100%] h-[100%] absolute"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)] text-center w-[100%]"
            data-testid="pending-modal-content-title"
          >
            Limit filled!
          </span>
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] text-center"
          >
            <div
              class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-center gap-[8px] w-[100%]"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[16px] h-[16px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="16"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 16px; height: 16px; border-radius: 16px; z-index: 1;"
                    width="16"
                  />
                </div>
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                  style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
                >
                  <div
                    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                    data-testid="network-logo-1"
                    style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 1.5px;"
                  >
                    <div
                      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                      style="object-fit: contain; width: 7px; height: 7px;"
                    >
                      <div
                        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                        style="background-image: url(ethereum-logo.png);"
                      />
                      <img
                        alt=""
                        class="css-accessibilityImage-9pa8cd"
                        draggable="false"
                        src="ethereum-logo.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
              >
                &lt;0.00001 DAI
              </span>
              <svg
                fill="none"
                stroke-width="8"
                style="width: 12px; height: 12px;"
                viewBox="0 0 18 18"
              >
                <path
                  d="M9.79261 16.1108L17.5398 8.36364L9.79261 0.616477L8.25852 2.15057L13.3807 7.25568H0V9.47159H13.3807L8.25852 14.5852L9.79261 16.1108Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[16px] h-[16px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="16"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                    style="object-fit: cover; width: 16px; height: 16px; border-radius: 16px; z-index: 1;"
                    width="16"
                  />
                </div>
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                  style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
                >
                  <div
                    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                    data-testid="network-logo-1"
                    style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 1.5px;"
                  >
                    <div
                      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                      style="object-fit: contain; width: 7px; height: 7px;"
                    >
                      <div
                        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                        style="background-image: url(ethereum-logo.png);"
                      />
                      <img
                        alt=""
                        class="css-accessibilityImage-9pa8cd"
                        draggable="false"
                        src="ethereum-logo.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
              >
                0.0001 USDC
              </span>
            </div>
          </span>
        </div>
      </div>
      <div
        class="flex basis-auto box-border relative min-w-[0px] shrink-0 flex-row items-center justify-center mt-[32px] w-[100%] min-h-[24px]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          <a
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:535] [color:var(--stext-neutral2)] no-underline [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)]"
            href="https://etherscan.io/tx/0x1234"
            rel="noopener noreferrer"
            role="link"
            style="--ch-opacity: 0.6; --ca-opacity: 0.4; transition: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
            target="_blank"
          >
            View on Explorer
          </a>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pending - uniswapX trade titles > renders limit order correctly, with approvalPending= %p , revocationPending= %p, wrapTxHash= %p false false undefined 3`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[24px] mt-[48px] mb-[8px] w-[100%] animate-spore-enter-presence opacity-[1]"
    style="--spore-presence-enter-x: 40px; animation-duration: 300ms; animation-timing-function: ease-in-out;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 justify-center w-[64px] h-[64px] rounded-[999999px] overflow-visible relative"
    >
      <div
        class="fade-presence fade-presence-fade"
      >
        <svg
          class="rotating-svg"
          fill="rgba(19, 19, 19, 0.35)"
          stroke="rgba(19, 19, 19, 0.35)"
          style="height: calc(100% + 8px); width: calc(100% + 8px); top: -4px; left: -4px; position: absolute;"
          viewBox="0 0 54 54"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.6666 26.9999C53.6666 41.7275 41.7276 53.6666 27 53.6666C12.2724 53.6666 0.333313 41.7275 0.333313 26.9999C0.333313 12.2723 12.2724 0.333252 27 0.333252C41.7276 0.333252 53.6666 12.2723 53.6666 26.9999ZM8.33331 26.9999C8.33331 37.3092 16.6907 45.6666 27 45.6666C37.3093 45.6666 45.6666 37.3092 45.6666 26.9999C45.6666 16.6906 37.3093 8.33325 27 8.33325C16.6907 8.33325 8.33331 16.6906 8.33331 26.9999Z"
            fill="rgba(19, 19, 19, 0.35)"
            opacity="0.1"
          />
          <path
            d="M49.6666 26.9999C51.8758 26.9999 53.6973 25.1992 53.3672 23.0149C53.0452 20.884 52.4652 18.7951 51.6368 16.795C50.2966 13.5597 48.3324 10.62 45.8562 8.14374C43.3799 5.66751 40.4402 3.70326 37.2049 2.36313C35.2048 1.53466 33.1159 0.954747 30.985 0.632693C28.8007 0.30256 27 2.12411 27 4.33325C27 6.54239 28.8108 8.29042 30.9695 8.76019C32.0523 8.99585 33.1146 9.32804 34.1434 9.75417C36.4081 10.6923 38.4659 12.0672 40.1993 13.8006C41.9327 15.534 43.3076 17.5918 44.2457 19.8565C44.6719 20.8853 45.004 21.9476 45.2397 23.0304C45.7095 25.1891 47.4575 26.9999 49.6666 26.9999Z"
            fill="rgba(19, 19, 19, 0.35)"
          />
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[12px] px-[32px] w-[100%] opacity-[1] overflow-visible"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-w-[0px] shrink-0 grow-[1] w-[100%] min-h-[var(--c-min-h)] relative"
        style="--c-min-h: 72px;"
      >
        <div
          class="flex basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-col items-center gap-[12px] w-[100%] h-[100%] absolute"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)] text-center w-[100%]"
            data-testid="pending-modal-content-title"
          >
            Confirm limit
          </span>
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] text-center"
          >
            <div
              class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-center gap-[8px] w-[100%]"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[16px] h-[16px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="16"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 16px; height: 16px; border-radius: 16px; z-index: 1;"
                    width="16"
                  />
                </div>
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                  style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
                >
                  <div
                    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                    data-testid="network-logo-1"
                    style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 1.5px;"
                  >
                    <div
                      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                      style="object-fit: contain; width: 7px; height: 7px;"
                    >
                      <div
                        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                        style="background-image: url(ethereum-logo.png);"
                      />
                      <img
                        alt=""
                        class="css-accessibilityImage-9pa8cd"
                        draggable="false"
                        src="ethereum-logo.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
              >
                &lt;0.00001 DAI
              </span>
              <svg
                fill="none"
                stroke-width="8"
                style="width: 12px; height: 12px;"
                viewBox="0 0 18 18"
              >
                <path
                  d="M9.79261 16.1108L17.5398 8.36364L9.79261 0.616477L8.25852 2.15057L13.3807 7.25568H0V9.47159H13.3807L8.25852 14.5852L9.79261 16.1108Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[16px] h-[16px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="16"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                    style="object-fit: cover; width: 16px; height: 16px; border-radius: 16px; z-index: 1;"
                    width="16"
                  />
                </div>
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                  style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
                >
                  <div
                    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                    data-testid="network-logo-1"
                    style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 1.5px;"
                  >
                    <div
                      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                      style="object-fit: contain; width: 7px; height: 7px;"
                    >
                      <div
                        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                        style="background-image: url(ethereum-logo.png);"
                      />
                      <img
                        alt=""
                        class="css-accessibilityImage-9pa8cd"
                        draggable="false"
                        src="ethereum-logo.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
              >
                0.0001 USDC
              </span>
            </div>
          </span>
        </div>
      </div>
      <div
        class="flex basis-auto box-border relative min-w-[0px] shrink-0 flex-row items-center justify-center mt-[32px] w-[100%] min-h-[24px]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          Proceed in your wallet
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
